<resources>
    <string name="app_name">Intents</string>
    <string name="web_page">Open web page</string>
    <string name="phone_call">Phone call</string>
    <string name="google_maps">Google Maps</string>
    <string name="take_photo">Take photo</string>
    <string name="send_mail">Send mail</string>
    <string name="web_search">Web search</string>
    <string name="dialer">Phone dialer</string>
    <string name="street_view">Street view</string>
    <string name="share">Share with..</string>
</resources>
