<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.felixserrano.intents.MainActivity">


    <Button
        android:text="@string/web_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_web_page" />

    <Button
        android:text="@string/phone_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_call" />

    <Button
        android:text="@string/google_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_gmaps" />

    <Button
        android:text="@string/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_take_photo" />

    <Button
        android:text="@string/send_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send_mail" />
</LinearLayout>
